# CLICyber

./: README.md  pyproject.toml
cybercli/: __init__.py  api.py  cli.py
cybercli/engines/: alerting.py  auth_analysis.py  blue_team.py  container_security.py  cve_monitor.py  file_integrity.py  geoip.py  hardening_checker.py  malware_scanner.py  ml_classifier.py  network_scanner.py  red_team.py  remediator.py  reporting.py  siem_integration.py  threat_hunter.py  threat_intel.py
docs/: API.md  INSTALL.md  USAGE.md
tasks/: lessons.md  todo.md
tests/: test_cli.py  test_compliance.py  test_extended_features.py  test_learn.py  test_profiles_and_schedules.py
