[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cybercli"
version = "0.2.0"
description = "Simplified Security CLI - Network scanning, hardening, and compliance"
requires-python = ">=3.8"
authors = [ { name = "CyberAgent CLI Team", email = "info@example.com" } ]
license = { text = "MIT" }
readme = "README.md"

dependencies = [
    "typer>=0.9",
    "requests>=2.31",
    "fastapi>=0.104",
    "uvicorn>=0.24",
]

[tool.setuptools]
packages = ["cybercli"]
